--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -19,7 +19,7 @@ coverage==6.4.4
 requests==2.28.1
 freezegun==1.2.2
 factory-boy==3.2.1
-django-mptt==0.15.0
+django-mptt
 python-telegram-bot
 django-ckeditor
 telebot
