--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -20,7 +20,4 @@ requests==2.28.1
 freezegun==1.2.2
 factory-boy==3.2.1
 django-mptt
-python-telegram-bot
-django-ckeditor
-telebot
-telethon
+django-oauth-toolkit==2.3.0
