--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -20,8 +20,5 @@ requests==2.28.1
 freezegun==1.2.2
 factory-boy==3.2.1
 django-mptt
-django-oauth-toolkit==2.3.0
-python-telegram-bot
-django-ckeditor
-telebot
-telethon
+django-allauth==0.60.1
+dj-rest-auth==5.0.2
