--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -22,6 +22,6 @@ factory-boy==3.2.1
 django-mptt
 django-allauth==0.60.1
 dj-rest-auth==5.0.2
-zibal-django
 telegram
 python-telegram-bot
+#zibal-django
