DATABASE CONFIGURATION IN PRODUCTION

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     volumes:
       - .:/ieltsways_back
     env_file:
-      - .env.local
+      - .env
     depends_on:
       - postgres
       - redis
