DATABASE CONFIGURATION IN PRODUCTION DEBUG

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ STAGE="PRODUCTION"
 POSTGRES_NAME="IELTSWaysDB"
 POSTGRES_USER="root"
 POSTGRES_PASSWORD="IELTSWaysDB1234!!"
-POSTGRES_HOST="db"
+#POSTGRES_HOST="db"
 POSTGRES_PORT="5432"
 SECRET_KEY="django-insecure-zmk1c2%=a2k@mj)e-ibe+4!-w9&(p9uan0*6i2vd$nkeh10uqf"
 key="django-insecure-zmk1c2%=a2k@mj)e-ibe+4!-w9&(p9uan0*6i2vd$nkeh10uqf"
