DATABASE CONFIGURATION IN PRODUCTION DEBUG

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 STAGE="PRODUCTION"
-POSTGRES_NAME="IELTSWaysDB"
+POSTGRES_DB="IELTSWaysDB"
 POSTGRES_USER="root"
 POSTGRES_PASSWORD="IELTSWaysDB1234!!"
 POSTGRES_HOST="postgres"
