DATABASE CONFIGURATION IN PRODUCTION DEBUG

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 STAGE="PRODUCTION"
 POSTGRES_DB="postgres"
 POSTGRES_USER="postgres"
-POSTGRES_PASSWORD="mypassword"
+POSTGRES_PASSWORD="mypassword123"
 SECRET_KEY="django-insecure-zmk1c2%=a2k@mj)e-ibe+4!-w9&(p9uan0*6i2vd$nkeh10uqf"
 key="django-insecure-zmk1c2%=a2k@mj)e-ibe+4!-w9&(p9uan0*6i2vd$nkeh10uqf"
 ALLOWED_HOSTS=['*']
