--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3'
 
 services:
 
-  db:
-    container_name: db
+  postgres:
+    container_name: postgres
     image: postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data
@@ -40,7 +40,7 @@ services:
     env_file:
       - .env
     depends_on:
-      - db
+      - postgres
       - redis
     restart: unless-stopped
     networks:
