--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   postgres:
     container_name: postgres
-    image: postgres
+    image: postgres:14.6
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: unless-stopped
