--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,11 @@ services:
       - "5432:5432"
     networks:
       main:
+    environment:
+      POSTGRES_DB: postgres
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: MyPassword123
+      POSTGRES_HOST_AUTH_METHOD: trust
     env_file:
       - .env
 
