--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,10 @@ services:
     networks:
       main:
     environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: MyPassword123
-      POSTGRES_HOST_AUTH_METHOD: trust
+      POSTGRES_DB: "postgres"
+      POSTGRES_USER: "root"
+      POSTGRES_PASSWORD: "MyPassword123"
+      POSTGRES_HOST_AUTH_METHOD: "trust"
     env_file:
       - .env
 
