--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   postgres:
     container_name: postgres
-    image: postgres:13
+    image: postgres:13-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: unless-stopped
@@ -12,8 +12,6 @@ services:
       - "5432:5432"
     networks:
       main:
-    environment:
-      POSTGRES_HOST_AUTH_METHOD: trust
     env_file:
       - .env
 
