--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ CSRF_TRUSTED_ORIGINS=["https://ieltsways.nimadorostkar.com"]
 CORS_ORIGIN_ALLOW_ALL=True
 CORS_REPLACE_HTTPS_REFERER=True
 CORS_ALLOW_CREDENTIALS=True
-DEBUG=False
+DEBUG=True
