--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     networks:
       main:
     env_file:
-      - .env
+      - .env.p
 
   redis:
     container_name: redis
@@ -38,7 +38,7 @@ services:
     volumes:
       - .:/ieltsways_back
     env_file:
-      - .env
+      - .env.p
     depends_on:
       - postgres
       - redis
