--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -7,7 +7,6 @@ PyJWT==2.6.0
 kavenegar==1.1.2
 Pillow==9.3.0
 unicode-slugify==0.1.5
-requests==2.28.1
 django-filter
 django-extensions==3.2.1
 gunicorn==20.1.0
@@ -20,6 +19,7 @@ requests==2.28.1
 freezegun==1.2.2
 factory-boy==3.2.1
 django-mptt
+django-ckeditor==6.5.0
 django-allauth==0.60.1
 dj-rest-auth==5.0.2
 telegram
