--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Deploy to VPS
         uses: appleboy/ssh-action@master
         with:
-          host: http://195.214.235.46
+          host: 195.214.235.46
           username: root
           password: dssdvSDVSDVqwc21
           script: |
