--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,21 @@ on:
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
-    steps:      
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v2
+      
+      - name: Login to Dockerhub
+        uses: docker/login-action@v1
+        with:
+          username: nimadorostkar
+          password: 2620376513nima!!
+      
+      - name: Build and push Docker image
+        run: |
+          docker build -t nimadorostkar/ieltsways:latest .
+          docker push nimadorostkar/ieltsways:latest
+      
       - name: Deploy to VPS
         uses: appleboy/ssh-action@master
         with:
@@ -16,6 +30,6 @@ jobs:
           username: root
           password: dssdvSDVSDVqwc21
           script: |
+            docker pull nimadorostkar/ieltsways:latest
             cd ~/../IELTSWays/Back-End/
-            git pull
             docker-compose up -d --build
