--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,4 +32,5 @@ jobs:
           script: |
             docker pull nimadorostkar/ieltsways:latest
             cd ~/../IELTSWays/Back-End/
+            git pull
             docker-compose up -d --build
